// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`render dot 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#505256",
      },
      Object {
        "fontFamily": "SourceSansPro-Regular",
      },
      Object {},
    ]
  }
>
    ·  
</Text>
`;

exports[`render dot with style 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#505256",
      },
      Object {
        "fontFamily": "SourceSansPro-Regular",
      },
      Object {
        "color": "blue",
      },
    ]
  }
>
    ·  
</Text>
`;
